assets/css/main.css
/* ... */
.service-active .service-trigger {
    background: #222;
}

.service-active p {
	font-family: 'Lato', sans-serif;
	padding-top: 10px;
}

.service-content {
    padding: 15px 20px;
    background: #e6eaed;
    display: block;
    height: auto
}

.service-content p:last-child {
    margin: 0;
}


/* ==========================================================================
   Image Mask
   ========================================================================== */

.grid figure {
	margin: 0;
	position: relative;
}

.grid figure img {
	width: 100%;
	display: block;
	position: relative;
}

.grid figcaption {
	position: absolute;
	top: 0;
	left: 0;
	padding: 20px;
	color: #fff;
	background: #1abc9c;
}

.grid figcaption h5 {
	margin: 0;
	padding-top: 0px;
	padding-left: 20px;
	padding-bottom: 5px;
	color: #fff;
	font-weight: 700;
	text-align: left;
	letter-spacing: 2px;
	
}

.grid figcaption a {
	text-align: left;
	padding: 5px 10px;
	margin-left: 20px;
	display: inline-block;
	background: #2f2f2f;
	color: #fff;
	font-size: 13px;
}

/* Caption Style */
.mask figure {
	overflow: hidden;
}

.mask figure img {
	-webkit-transition: -webkit-transform 0.4s;
	-moz-transition: -moz-transform 0.4s;
	transition: transform 0.4s;
}

.no-touch .mask figure:hover img,
.mask figure.cs-hover img {
	-webkit-transform: translateY(-30px);
	-moz-transform: translateY(-30px);
	-ms-transform: translateY(-30px);
	transform: translateY(-30px);
}

.mask figcaption {
	height: 50px;
	width: 100%;
	top: auto;
	bottom: 0;
	opacity: 0;
	-webkit-transform: translateY(100%);
	-moz-transform: translateY(100%);
	-ms-transform: translateY(100%);
	transform: translateY(100%);
	-webkit-transition: -webkit-transform 0.4s, opacity 0.1s 0.3s;
	-moz-transition: -moz-transform 0.4s, opacity 0.1s 0.3s;
	transition: transform 0.4s, opacity 0.1s 0.3s;
}

.no-touch .mask figure:hover figcaption,
.mask figure.cs-hover figcaption {
	opacity: 1;
	-webkit-transform: translateY(0px);
	-moz-transform: translateY(0px);
	-ms-transform: translateY(0px);
	transform: translateY(0px);
	-webkit-transition: -webkit-transform 0.4s, opacity 0.1s;
	-moz-transition: -moz-transform 0.4s, opacity 0.1s;
	transition: transform 0.4s, opacity 0.1s;
}

.mask figcaption a {
	position: absolute;
	top:10px;
	bottom: 10px;
	right: 30px;
}


/* ==========================================================================
   Blog Section
   ========================================================================== */

.blog-bg {
	background: #2b2b2b;
	padding-right: 0px;
	padding-left: 0px;
	
}

.blog-bg h4 {
	color: #dadada;
	padding-top: 0px;
}

.blog-bg h5 {
	color: #dadada;
	font-size: 11px;
}

.blog-content {
	padding-top: 10px;
	background: #f2f2f2;
}


/* ==========================================================================
   Pricing Tables
   ========================================================================== */
   
.pricing-option {
    padding-bottom: 40px;
}

.pricing-option .pricing-top {
    position: relative;
    background: #222;
    color: white;
    text-align: center;
    font-weight: bold;

    padding: 40px 20px 30px 20px;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

.pricing-option .pricing-top .special-label {
    display: block;
    width: 100%;
    position: absolute;
    top: 0;
    left: 0;
    background: #1abc9c;
    text-transform: uppercase;
    font-size: 15px;
    font-weight: bold;
    padding: 3px 0;
}

.special .pricing-top {
    background: black;
}

.pricing-option .pricing-edition {
    text-transform: uppercase;
    display: block;
    font-size: 25px;
    letter-spacing: 8px;
}

.pricing-option .price {
    display: inline-block;
    position: relative;
}

.pricing-option .price sup {
    position: absolute;
    top: 50px;
    left: -10px;
    font-size: 24px;
}

.pricing-option .price .price-amount {
    font-size: 108px;
    letter-spacing: -4px;
}

.pricing-option .price small {
    position: relative;
    left: -10px;
    font-size: 18px;
}

.pricing-option ul {
    list-style: none;
    margin: 0;
    background: #eee;
    text-align: center;
    padding-left: 0px;
}

.pricing-option ul li {
    border-bottom: solid 1px #e1e1e1;
    padding-top: 20px;
    padding-bottom: 20px;
}

.pricing-option .pricing-signup {
    display: block;
    text-align: center;
    font-size: 18px;
    font-weight: bold;
    padding: 15px 10px;
    color: white;
    background: #1abc9c;
}

.pricing-option .pricing-signup:hover {
    background: #c0392b;
}



/* ==========================================================================
   MEDIA QUERIES
   ========================================================================== */


@media screen and (max-width:1050px), screen and (max-device-width:1050px){
	body .header{background-attachment: scroll;}
}


/*ipad portrait*/
@media only screen and (min-device-width:768px) and (max-device-width : 1024px) and (orientation : portrait){
	.header{background-attachment: scroll;}
}

@media screen and (max-width:769px) {
	#headerwrap h1 {
		font-size: 80px;
	}
	#headerwrap p {
		font-size: 30px;
		line-height: 38px;
	}
}

